--- a/monamedia/monamedia/monamedia/monamedia.csproj
+++ b/monamedia/monamedia/monamedia/monamedia.csproj
@@ -131,6 +131,9 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Areas\Admin\Controllers\CustomerController.cs" />
+    <Compile Include="Areas\Admin\Controllers\StaffController.cs" />
+    <Compile Include="Areas\Admin\Data\EditInformation.cs" />
     <Compile Include="Areas\Admin\Data\EditStaffViewModel.cs" />
     <Compile Include="Areas\Staff\Controllers\SDeliveryController.cs" />
     <Compile Include="Areas\Staff\Controllers\SHomeController.cs" />
@@ -409,6 +412,8 @@
     <Content Include="Areas\Admin\Views\AHome\Index.cshtml" />
     <Content Include="Areas\Admin\Views\AHome\CreateStaff.cshtml" />
     <Content Include="Areas\Admin\Views\AHome\EditStaff.cshtml" />
+    <Content Include="Areas\Staff\Views\SOrder\AllOrder.cshtml" />
+    <Content Include="Areas\Staff\Views\SDelivery\AllDelivery.cshtml" />
     <EntityDeploy Include="Models\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
@@ -416,8 +421,7 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
-    <Content Include="Areas\Staff\Views\SOrder\AllOrder.cshtml" />
-    <Content Include="Areas\Staff\Views\SDelivery\AllDelivery.cshtml" />
+    <Content Include="Areas\Admin\Views\AHome\AccountManage.cshtml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.1.js" />
     <Content Include="Scripts\jquery-3.7.1.min.js" />
@@ -940,6 +944,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\Admin\Views\Customer\" />
+    <Folder Include="Areas\Admin\Views\Staff\" />
     <Folder Include="Areas\Staff\Data\" />
     <Folder Include="Views\Order\" />
     <Folder Include="Views\Product\" />
