--- a/monamedia/monamedia/monamedia/monamedia.csproj
+++ b/monamedia/monamedia/monamedia/monamedia.csproj
@@ -422,6 +422,7 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
     <Content Include="Areas\Admin\Views\AHome\AccountManage.cshtml" />
+    <Content Include="Areas\Admin\Views\AHome\Information.cshtml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.1.js" />
     <Content Include="Scripts\jquery-3.7.1.min.js" />
