--- a/monamedia/monamedia/monamedia/monamedia.csproj
+++ b/monamedia/monamedia/monamedia/monamedia.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Areas\Admin\Controllers\StaffController.cs" />
     <Compile Include="Areas\Admin\Data\EditInformation.cs" />
     <Compile Include="Areas\Admin\Data\EditStaffViewModel.cs" />
+    <Compile Include="Areas\Staff\Controllers\SAccountController.cs" />
     <Compile Include="Areas\Staff\Controllers\SDeliveryController.cs" />
     <Compile Include="Areas\Staff\Controllers\SHomeController.cs" />
     <Compile Include="Areas\Staff\Controllers\SOrderController.cs" />
@@ -209,8 +210,10 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\DeliveringViewModel.cs" />
     <Compile Include="ViewModels\OrderViewModel.cs" />
     <Compile Include="ViewModels\ProductViewModel.cs" />
+    <Compile Include="ViewModels\ProfileViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -249,6 +252,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="img\backgroundlogin.png" />
+    <Content Include="img\mainpage.png" />
     <Content Include="Models\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
@@ -414,6 +418,7 @@
     <Content Include="Areas\Admin\Views\AHome\EditStaff.cshtml" />
     <Content Include="Areas\Staff\Views\SOrder\AllOrder.cshtml" />
     <Content Include="Areas\Staff\Views\SDelivery\AllDelivery.cshtml" />
+    <Content Include="Areas\Admin\Views\AHome\AccountManage.cshtml" />
     <EntityDeploy Include="Models\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
@@ -421,7 +426,9 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
-    <Content Include="Areas\Admin\Views\AHome\AccountManage.cshtml" />
+    <Content Include="Areas\Staff\Views\SDelivery\AllDelivering.cshtml" />
+    <Content Include="Areas\Staff\Views\SDelivery\AllDelivered.cshtml" />
+    <Content Include="Areas\Staff\Views\SAccount\AccountInfo.cshtml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.1.js" />
     <Content Include="Scripts\jquery-3.7.1.min.js" />
