--- a/monamedia/monamedia/monamedia.csproj
+++ b/monamedia/monamedia/monamedia.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Areas\Staff\Controllers\SReviewController.cs" />
     <Compile Include="Areas\Staff\StaffAreaRegistration.cs" />
     <Compile Include="Controllers\AdminStaffController.cs" />
+    <Compile Include="Controllers\DiscountController.cs" />
     <Compile Include="Controllers\ExportController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
@@ -208,11 +209,15 @@
     <Compile Include="Models\Staff.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\sysdiagram.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Wishlist.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\DeliveringViewModel.cs" />
+    <Compile Include="ViewModels\DiscountViewModel.cs" />
     <Compile Include="ViewModels\ExportViewModel.cs" />
     <Compile Include="ViewModels\OrderViewModel.cs" />
     <Compile Include="ViewModels\ProductViewModel.cs" />
@@ -427,6 +432,12 @@
     <Content Include="Areas\Staff\Views\SDelivery\AllDelivered.cshtml" />
     <Content Include="Areas\Staff\Views\SAccount\AccountInfo.cshtml" />
     <Content Include="Areas\Admin\Views\AHome\Information.cshtml" />
+    <Content Include="Areas\Admin\Views\AHome\AllExport.cshtml" />
+    <Content Include="Areas\Admin\Views\AHome\AllExported.cshtml" />
+    <Content Include="Areas\Staff\Views\SReview\AllReview.cshtml" />
+    <Content Include="Areas\Staff\Views\SReview\AllReviewed.cshtml" />
+    <Content Include="Areas\Admin\Views\AHome\Discount.cshtml" />
+    <Content Include="Areas\Admin\Views\AHome\AddDiscount.cshtml" />
     <EntityDeploy Include="Models\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
@@ -434,10 +445,6 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
-    <Content Include="Areas\Admin\Views\AHome\AllExport.cshtml" />
-    <Content Include="Areas\Admin\Views\AHome\AllExported.cshtml" />
-    <Content Include="Areas\Staff\Views\SReview\AllReview.cshtml" />
-    <Content Include="Areas\Staff\Views\SReview\AllReviewed.cshtml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.1.js" />
     <Content Include="Scripts\jquery-3.7.1.min.js" />
@@ -963,6 +970,7 @@
     <Folder Include="Areas\Admin\Views\Customer\" />
     <Folder Include="Areas\Admin\Views\Staff\" />
     <Folder Include="Areas\Staff\Data\" />
+    <Folder Include="Views\Discount\" />
     <Folder Include="Views\Export\" />
     <Folder Include="Views\Order\" />
     <Folder Include="Views\Product\" />
