--- a/monamedia/monamedia/monamedia.csproj
+++ b/monamedia/monamedia/monamedia.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Controllers\DiscountController.cs" />
     <Compile Include="Controllers\ExportController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ImportController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
@@ -438,6 +439,9 @@
     <Content Include="Areas\Staff\Views\SReview\AllReviewed.cshtml" />
     <Content Include="Areas\Admin\Views\AHome\Discount.cshtml" />
     <Content Include="Areas\Admin\Views\AHome\AddDiscount.cshtml" />
+    <Content Include="Areas\Admin\Views\AHome\Revenue.cshtml" />
+    <Content Include="Areas\Admin\Views\AHome\Import.cshtml" />
+    <Content Include="Areas\Admin\Views\AHome\AddImport.cshtml" />
     <EntityDeploy Include="Models\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
@@ -445,7 +449,6 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
-    <Content Include="Areas\Admin\Views\AHome\Revenue.cshtml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.1.js" />
     <Content Include="Scripts\jquery-3.7.1.min.js" />
@@ -973,6 +976,7 @@
     <Folder Include="Areas\Staff\Data\" />
     <Folder Include="Views\Discount\" />
     <Folder Include="Views\Export\" />
+    <Folder Include="Views\Import\" />
     <Folder Include="Views\Order\" />
     <Folder Include="Views\Product\" />
   </ItemGroup>
