--- a/monamedia/monamedia/monamedia.csproj
+++ b/monamedia/monamedia/monamedia.csproj
@@ -214,6 +214,9 @@
     <Compile Include="Models\sysdiagram.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Wishlist.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\DeliveringViewModel.cs" />
     <Compile Include="ViewModels\DiscountViewModel.cs" />
@@ -441,6 +444,7 @@
     <Content Include="Areas\Admin\Views\AHome\Revenue.cshtml" />
     <Content Include="Areas\Admin\Views\AHome\Import.cshtml" />
     <Content Include="Areas\Admin\Views\AHome\AddImport.cshtml" />
+    <Content Include="Areas\Staff\Views\SImport\AllImport.cshtml" />
     <EntityDeploy Include="Models\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
@@ -448,7 +452,6 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
-    <Content Include="Areas\Staff\Views\SImport\AllImport.cshtml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.1.js" />
     <Content Include="Scripts\jquery-3.7.1.min.js" />
